--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
   "author": "Dan Jensen",
   "license": "MIT",
   "devDependencies": {
-    "jest": "^22.0.4"
+    "jest": "^22.0.4",
+    "pre-commit": "^1.2.2"
   },
   "scripts": {
+    "prettier": "prettier \"*/**/*.js\" --ignore-path ./.prettierignore --write && git add . && git status",
     "test": "jest"
-  }
+  },
+  "pre-commit": [
+    "prettier"
+  ]
 }
